# My-Online-Portfolio

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
cs-server/: main.cpp  utils.cpp  utils.hpp  views.cpp  views.hpp
cs-server/views/: index.html
csp/: build-and-run.sh  build-run.sh  constants.cpp  constants.hpp  main.cpp  routing.cpp  routing.hpp  run.sh  setup-and-build.sh  setup-build-run.sh  templates.cpp  templates.hpp  types.hpp  utils.cpp  utils.hpp  views.cpp  views.hpp
csp/ssl/: cert.pem  key.pem
csp/views/: about-me.thtml  club-u.thtml  error.thtml  global-header.html  index.thtml  nav.thtml
src/: main.cpp
